# sentinel

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CI_FAILURE_ANNOTATIONS.txt  CONTRIBUTING.md  Complete-Plan.md  Dockerfile  Makefile  README.md  SENTINEL_60H_PLAN_COPYABLE.txt  SENTINEL_9DAY_PLAN_COPYABLE.txt  docker-compose.yml  llm-streaming-openai-anthropic-plan.md  practice.py  pyproject.toml  requirements.txt  structure.txt  test_all_today.py  test_sentinel_api.py  test_session1_sentinel.py  test_stream.py  verify_complete.py
.github/workflows/: ci.yml
docs/adr/: 001-fastapi-over-flask.md  002-circuit-breaker-pattern.md  003-semantic-caching-faiss.md  004-pii-detection-presidio.md  005-api-key-auth-over-oauth.md
scripts/: README_TEST_OPENAI_STREAM.md  run_groq_test.ps1  test_anthropic_live.py  test_openai_stream.py
src/sentinel/: __init__.py  main.py
src/sentinel/api/: __init__.py  converters.py  dependencies.py
src/sentinel/core/: __init__.py  auth.py  circuit_breaker.py  config.py  context.py  http.py  logging_config.py  metrics.py  rate_limiter.py  redis.py  retry.py  telemetry.py  utils.py
src/sentinel/domain/: __init__.py  exceptions.py  models.py
src/sentinel/judge/: __init__.py  evaluator.py  models.py  prompt_builder.py  recorder.py
src/sentinel/middleware/: trace.py  (+1 more)
tests/: conftest.py  test_anthropic_provider.py  test_api_endpoints.py  test_auth.py  test_cache.py  test_circuit_breaker.py  test_integration.py  test_pii_shield.py  test_presidio.py  test_providers.py  test_rate_limiter.py  test_retry.py  test_sentinel_additions.py
(+26 files in other folders)
