[project]
name = "sentinel"
version = "0.1.0"
description = "Production-grade LLM Gateway with security, resilience, and observability"
readme = "README.md"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]
ignore = ["E501", "UP042", "B017"]

[tool.ruff.lint.isort]
known-first-party = ["sentinel"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
